# HighPerformancePython

./: docker-compose.yml
Lab1Py/: .dockerignore  Dockerfile  main.py  pyproject.toml  report.md
Lab2Py/: .dockerignore  Dockerfile  REPORT.md  main.py  requirements.txt
Lab2Py/cpp_solver/: laplace.cpp  pyproject.toml  setup.py
Lab2Py/cpp_solver/cpp_laplace.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
